--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -175,9 +175,13 @@
             <objects>
                 <viewController title="Team Detail View Controller" id="OEk-U0-avN" customClass="TeamDetailViewController" customModule="The_JBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8id-8k-wMF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VNe-46-nBP">
+                                <rect key="frame" x="234" y="50" width="150" height="150"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8TA-Lc-QQp">
                                 <rect key="frame" x="234" y="50" width="150" height="150"/>
                                 <constraints>
@@ -293,7 +297,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9DF-Ov-G7c">
+                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9DF-Ov-G7c">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="XqB-GE-Gdr">
@@ -318,14 +322,18 @@
                             <constraint firstItem="wCS-1y-TfG" firstAttribute="trailing" secondItem="PoL-74-VOu" secondAttribute="trailing" id="2mv-TM-Shw"/>
                             <constraint firstItem="9DF-Ov-G7c" firstAttribute="top" secondItem="8id-8k-wMF" secondAttribute="top" id="52s-R1-KLe"/>
                             <constraint firstItem="PoL-74-VOu" firstAttribute="trailing" secondItem="1DF-aW-AN5" secondAttribute="trailing" constant="10" id="5Jz-81-u7g"/>
+                            <constraint firstItem="VNe-46-nBP" firstAttribute="leading" secondItem="8TA-Lc-QQp" secondAttribute="leading" id="5Le-T5-t3k"/>
                             <constraint firstItem="9DF-Ov-G7c" firstAttribute="leading" secondItem="8id-8k-wMF" secondAttribute="leading" id="7FE-IF-Pvg"/>
                             <constraint firstItem="8TA-Lc-QQp" firstAttribute="leading" secondItem="B4W-J5-H6P" secondAttribute="trailing" constant="20" id="9gK-iZ-Myk"/>
                             <constraint firstItem="XKX-AR-6ug" firstAttribute="leading" secondItem="B4W-J5-H6P" secondAttribute="leading" id="9vB-SH-KW5"/>
+                            <constraint firstItem="VNe-46-nBP" firstAttribute="bottom" secondItem="8TA-Lc-QQp" secondAttribute="bottom" id="BuP-IE-rB6"/>
                             <constraint firstItem="B4W-J5-H6P" firstAttribute="centerY" secondItem="8TA-Lc-QQp" secondAttribute="centerY" constant="-10" id="EAf-c4-PoL"/>
                             <constraint firstItem="wCS-1y-TfG" firstAttribute="leading" secondItem="PoL-74-VOu" secondAttribute="leading" id="JGo-wF-47i"/>
                             <constraint firstItem="8TA-Lc-QQp" firstAttribute="top" secondItem="PoL-74-VOu" secondAttribute="top" constant="50" id="Olz-Mu-c2B"/>
                             <constraint firstItem="XKX-AR-6ug" firstAttribute="trailing" secondItem="B4W-J5-H6P" secondAttribute="trailing" id="Prf-hi-Um4"/>
                             <constraint firstAttribute="bottom" secondItem="9DF-Ov-G7c" secondAttribute="bottom" id="UD0-TP-fRC"/>
+                            <constraint firstItem="VNe-46-nBP" firstAttribute="top" secondItem="8TA-Lc-QQp" secondAttribute="top" id="WX0-kx-bnq"/>
+                            <constraint firstItem="VNe-46-nBP" firstAttribute="trailing" secondItem="8TA-Lc-QQp" secondAttribute="trailing" id="XQ7-ey-Mfr"/>
                             <constraint firstItem="1DF-aW-AN5" firstAttribute="top" secondItem="8TA-Lc-QQp" secondAttribute="bottom" constant="100" id="Ytr-sx-nKq"/>
                             <constraint firstItem="PoL-74-VOu" firstAttribute="bottom" secondItem="1DF-aW-AN5" secondAttribute="bottom" id="ZOL-7a-OXT"/>
                             <constraint firstItem="XKX-AR-6ug" firstAttribute="top" secondItem="B4W-J5-H6P" secondAttribute="bottom" constant="10" id="cn4-3H-6zK"/>
@@ -337,6 +345,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="Lt9-UV-Pej"/>
                     <connections>
+                        <outlet property="backgroundTeamImageView" destination="VNe-46-nBP" id="Pa4-Zy-8Pz"/>
                         <outlet property="logoImageView" destination="XqB-GE-Gdr" id="xYq-0R-Qw2"/>
                         <outlet property="logoView" destination="9DF-Ov-G7c" id="Dvg-NO-ynR"/>
                         <outlet property="playerSearchBar" destination="wCS-1y-TfG" id="TOi-uo-ylC"/>
