--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -121,20 +121,28 @@
                                 </prototypes>
                             </tableView>
                             <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="msP-9C-kQA">
-                                <rect key="frame" x="0.0" y="474.5" width="414" height="328.5"/>
+                                <rect key="frame" x="0.0" y="500.5" width="414" height="302.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xmark.bin.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="tvz-uV-aET">
-                                        <rect key="frame" x="157" y="115" width="100" height="99"/>
+                                        <rect key="frame" x="157" y="102" width="100" height="99"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="b2r-Og-NFe"/>
                                             <constraint firstAttribute="height" constant="100" id="da3-Ru-muD"/>
                                         </constraints>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Teams" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SNB-1T-W7T">
+                                        <rect key="frame" x="159.5" y="211.5" width="95" height="26.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="tvz-uV-aET" firstAttribute="centerY" secondItem="msP-9C-kQA" secondAttribute="centerY" id="FOq-d5-cGe"/>
+                                    <constraint firstItem="SNB-1T-W7T" firstAttribute="centerX" secondItem="msP-9C-kQA" secondAttribute="centerX" id="Q6O-qV-Omf"/>
+                                    <constraint firstItem="tvz-uV-aET" firstAttribute="bottom" secondItem="SNB-1T-W7T" secondAttribute="top" constant="-10" id="jhj-RU-sCC"/>
                                 </constraints>
                             </view>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="8Za-i7-8DQ">
@@ -157,7 +165,6 @@
                             <constraint firstItem="reI-Vy-IBO" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" id="3IL-oG-ZHf"/>
                             <constraint firstItem="zHP-rU-8bk" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" constant="20" id="6EY-Dr-0lu"/>
                             <constraint firstItem="OmU-U6-kby" firstAttribute="trailing" secondItem="reI-Vy-IBO" secondAttribute="trailing" constant="10" id="7EG-IL-LND"/>
-                            <constraint firstItem="msP-9C-kQA" firstAttribute="top" secondItem="dV6-fs-0dY" secondAttribute="top" id="9Vs-Kt-FsH"/>
                             <constraint firstItem="OmU-U6-kby" firstAttribute="trailing" secondItem="msP-9C-kQA" secondAttribute="trailing" id="CuQ-Of-ABk"/>
                             <constraint firstItem="dV6-fs-0dY" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" constant="5" id="FVj-Ss-dpx"/>
                             <constraint firstItem="msP-9C-kQA" firstAttribute="leading" secondItem="OmU-U6-kby" secondAttribute="leading" id="I4g-6F-HJ6"/>
@@ -174,6 +181,7 @@
                             <constraint firstItem="rxj-Zd-w0Z" firstAttribute="top" secondItem="E8X-Jp-XrV" secondAttribute="bottom" constant="10" id="egE-uA-Gc4"/>
                             <constraint firstItem="zHP-rU-8bk" firstAttribute="top" secondItem="rxj-Zd-w0Z" secondAttribute="bottom" constant="15" id="haR-fp-xsX"/>
                             <constraint firstItem="8Za-i7-8DQ" firstAttribute="trailing" secondItem="OmU-U6-kby" secondAttribute="trailing" id="oEa-dw-xXm"/>
+                            <constraint firstItem="msP-9C-kQA" firstAttribute="top" secondItem="reI-Vy-IBO" secondAttribute="top" id="qGU-0n-5sH"/>
                             <constraint firstItem="E8X-Jp-XrV" firstAttribute="top" secondItem="bsb-bn-ssp" secondAttribute="topMargin" id="qq5-EC-AA0"/>
                             <constraint firstItem="OmU-U6-kby" firstAttribute="centerY" secondItem="rxj-Zd-w0Z" secondAttribute="bottom" constant="75" id="x6Y-pQ-6aG"/>
                             <constraint firstItem="msP-9C-kQA" firstAttribute="bottom" secondItem="reI-Vy-IBO" secondAttribute="bottom" id="zbX-MV-13G"/>
@@ -198,7 +206,7 @@
             <objects>
                 <viewController title="Team Detail View Controller" id="OEk-U0-avN" customClass="TeamDetailViewController" customModule="The_JBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8id-8k-wMF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VNe-46-nBP">
@@ -304,7 +312,7 @@
                                     <constraint firstAttribute="width" constant="150" id="lhx-aq-rsF"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gqm-sF-a1N">
+                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gqm-sF-a1N">
                                 <rect key="frame" x="0.0" y="300" width="414" height="508"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xmark.bin.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dmB-6X-ag4">
@@ -314,10 +322,18 @@
                                             <constraint firstAttribute="width" constant="100" id="h35-ZL-Qmv"/>
                                         </constraints>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Players" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJp-6v-rJu">
+                                        <rect key="frame" x="156" y="314" width="102" height="26.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="dmB-6X-ag4" firstAttribute="centerY" secondItem="gqm-sF-a1N" secondAttribute="centerY" id="T75-s0-Nq0"/>
+                                    <constraint firstItem="dmB-6X-ag4" firstAttribute="bottom" secondItem="MJp-6v-rJu" secondAttribute="top" constant="-10" id="TLS-qw-h93"/>
+                                    <constraint firstItem="MJp-6v-rJu" firstAttribute="centerX" secondItem="gqm-sF-a1N" secondAttribute="centerX" id="l9t-ZW-j2f"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team Name" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4W-J5-H6P">
@@ -336,7 +352,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9DF-Ov-G7c">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9DF-Ov-G7c">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="XqB-GE-Gdr">
@@ -393,6 +409,7 @@
                         <outlet property="logoImageView" destination="XqB-GE-Gdr" id="xYq-0R-Qw2"/>
                         <outlet property="logoView" destination="9DF-Ov-G7c" id="Dvg-NO-ynR"/>
                         <outlet property="noPlayersImageView" destination="dmB-6X-ag4" id="UaU-PG-ICO"/>
+                        <outlet property="noPlayersLabel" destination="MJp-6v-rJu" id="YKF-u7-2Ez"/>
                         <outlet property="noPlayersView" destination="gqm-sF-a1N" id="OTQ-kX-WtH"/>
                         <outlet property="playerSearchBar" destination="wCS-1y-TfG" id="TOi-uo-ylC"/>
                         <outlet property="recordLabel" destination="XKX-AR-6ug" id="ue8-hU-ygg"/>
@@ -544,10 +561,18 @@
                                             <constraint firstAttribute="height" constant="100" id="EWt-xN-h1v"/>
                                         </constraints>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Leaders" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aEX-5N-Q3V">
+                                        <rect key="frame" x="152.5" y="316" width="109" height="26.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="7gu-JS-4sf" firstAttribute="bottom" secondItem="aEX-5N-Q3V" secondAttribute="top" constant="-10" id="7VX-wW-fXx"/>
                                     <constraint firstItem="7gu-JS-4sf" firstAttribute="centerY" secondItem="7O0-yu-n7R" secondAttribute="centerY" id="XZC-0X-9DB"/>
+                                    <constraint firstItem="aEX-5N-Q3V" firstAttribute="centerX" secondItem="7O0-yu-n7R" secondAttribute="centerX" id="YQD-g2-SWJ"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P1V-I0-1gY">
@@ -632,7 +657,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6aE-pE-ecE"/>
+        <segue reference="Zsn-Qc-BP1"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Logo" width="422" height="334"/>
